workshop/capstone/demo-production-deployment-denied.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-prod-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-prod-deployment
  template:
    metadata:
      labels:
        app: demo-prod-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
