workshop/capstone/rollout-required-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireRollout
metadata:
  name: production-requires-argo-rollouts
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["production"]
